--- a/index.html
+++ b/index.html
@@ -9,42 +9,287 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nombre</title>
+
+  <title>Autoferia</title>
 </head>
 
 <body>
 
 <section id="1">
+  <nav>
+   <div class="nav-wrapper orange accent-3">
+     <a href="#" class="brand-logo center black-text">Autoferia</a>
+     <ul id="nav-mobile" class="right hide-on-med-and-down black-text text-darken-2">
+       <li><a href="#">Servicios</a></li>
+       <li><a href="#">Carros</a></li>
+       <li><a href="#">Contactos</a></li>
+     </ul>
+   </div>
+ </nav>
 
 </section>
 
 <section id="2">
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/1"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/2"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Left Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/3"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>Right Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://lorempixel.com/580/250/nature/4"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
 
 </section>
 
 <section id="3">
+  <div class="container">
+    <div class="row">
+      <div class="col l6">
+        <h3>Welcome to <span style="color:#f57c00;">Autoferia</span></h3>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col l3">
+        <img src="" alt="">
+      </div>
+      <div class="col l3">
+        <img src="" alt="">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col l4">
+        <p>Lista 1</p>
+
+          <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+          <li>Aliquam tincidunt mauris eu risus.</li>
+          <li>Vestibulum auctor dapibus neque.</li>
+          <li>Nunc dignissim risus id metus.</li>
+
+      </div>
+      <div class="col l4">
+        <p>Lista 2</p>
+
+          <li>Cras ornare tristique elit.</li>
+          <li>Vivamus vestibulum nulla nec ante.</li>
+          <li>Praesent placerat risus quis eros.</li>
+          <li>Fusce pellentesque suscipit nibh.</li>
+
+      </div>
+      <div class="col l4">
+        <img src="" alt="">
+      </div>
+      <div class="col l4">
+        <img src="" alt="">
+      </div>
+    </div>
+  </div>
 
 </section>
 
 <section id="4">
+  <br>
+  <br>
+  <div class="container">
 
+
+  <div class="row">
+    <h3 class="center">Vehiculos <span style="color:#f57c00;">Disponibles<span></h3>
+    <hr>
+  <div class="carousel">
+      <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+      <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+      <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+      <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+      <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+  </div>
+
+  </div>
+    </div>
 </section>
 
 <section id="5">
+  <div class="container">
+    <h3 class="center">Ultimos Vehiculos en Venta</h3>
+    <hr>
 
+  <div class="row">
+
+  <div class="col l4">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/sample-1.jpg">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col l4">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/sample-1.jpg">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col l4">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/sample-1.jpg">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+      </div>
+    </div>
+  </div>
+
+</div>
+<div class="row">
+  <div class="col l4">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/sample-1.jpg">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col l4">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/sample-1.jpg">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col l4">
+    <div class="card">
+      <div class="card-image">
+        <img src="images/sample-1.jpg">
+        <span class="card-title">Card Title</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 </section>
 
 <section id="6">
-
+  <footer class="page-footer grey darken-3">
+          <div class="container">
+            <div class="row">
+              <div class="col l3 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l3 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <div class="input-field">
+                     <input id="email" type="email" class="validate">
+                     <label for="email">Email</label>
+                   </div>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright black">
+            <div class="container">
+            © 2017 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
 </section>
 
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
+  <script type="text/javascript">
+        $(document).ready(function(){
+       $('.slider').slider();
+      });
+  </script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+  $('.carousel').carousel();
+});
+  </script>
   </body>
 
 </html>
